# DocTalk

./: .env.example  .gitignore  CLEANUP_COMPLETED.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETED.md  Makefile  NEXT_TASK.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.minimal.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  README.md  SILERO_VAD_OPTIMIZATION_FINAL_REPORT.md  alembic.ini  diagnostic_output.json  docker-compose.yml  pipeline_result.txt  pyproject.toml  test_complete_pipeline.py  test_final_validation.py  test_health_check.py  test_performance_check.py  test_seed.sql  test_vad_unit.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_15_1254-57ea3f761083_initial_schema_with_rls_and_worm.py  2025_10_16_1920-224beb08f380_add_foreign_keys_unique_constraints_and_.py  2025_10_17_2008-3da916c98460_add_unique_constraint_on_audit_events_.py  2025_10_18_0028-f55377a2ea91_add_recording_and_transcript_tables_for_.py  2025_10_19_0348-a9367592e5da_add_speaker_mapping_and_diarization_.py  2025_10_19_0438-536769940aaf_add_performance_indexes_manual.py
backend/app/: __init__.py  main.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  health.py  recordings.py  transcripts.py
backend/app/core/: config.py  database.py  logging.py
backend/app/db/: __init__.py
backend/app/ml/: __init__.py
backend/app/models/: __init__.py  audit.py  base.py  encounter.py  note.py  patient.py  recording.py  tenant.py  transcript.py  user.py
backend/app/schemas/: __init__.py  health.py  recording.py  transcript.py
backend/app/services/: diarization.py  health.py  storage.py  task_queue.py  transcript_processing.py  transcription.py  vad.py
backend/app/utils/: diarization.py
backend/app/worker/: __init__.py  __main__.py  arq.py  arq_config.py  tasks.py
backend/docs/experiments/: ASR_HYGIENE_AND_VOCABULARY_BOOSTING.md  TRANSCRIPTION_ANALYSIS.md  VOCABULARY_SIZE_PERFORMANCE_ANALYSIS.md  medical_vocabulary_ru.txt  medical_vocabulary_ru_150.txt  medical_vocabulary_ru_50.txt  test_vocabulary_performance.py  vocabulary_performance_results.json
backend/scripts/: seed_dev_data_sql.sh
backend/tests/: __init__.py  conftest.py  test_hash_chain.py  test_rls.py  test_worm.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
docs/: DEVELOPMENT_PHILOSOPHY.md  PYTHON_UPGRADE.md  STABILITY_REPORT.md
frontend/: .eslintrc.json  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
scripts/: fix-postgres-auth.sh  turnserver.conf
